add mongo test code

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<jedis.version>2.1.0</jedis.version>
+		<lombok.version>1.16.10</lombok.version>
+		<mongo.driver.version>3.2.2</mongo.driver.version>
 	</properties>
 
 	<dependencies>
@@ -64,6 +66,18 @@
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
 			<version>${jedis.version}</version>
+		</dependency>
+		<!--lombok-->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+		</dependency>
+		<!-- mongoDB jar -->
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>${mongo.driver.version}</version>
 		</dependency>
 
 	</dependencies>
