--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,12 @@
 			<artifactId>mongo-java-driver</artifactId>
 			<version>${mongo.driver.version}</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.10.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
