--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,14 @@
 			<artifactId>poi-excelant</artifactId>
 			<version>3.10-FINAL</version>
 		</dependency>
+		<!--HBase-->
+		<dependency>
+			<groupId>org.apache.hbase</groupId>
+			<artifactId>hbase-it</artifactId>
+			<version>1.1.2</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
